[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/L3_forest/mansion/mansion_marble_room/mansion_marble_room_bg-min.png" type="Texture" id=1]
[ext_resource path="res://sprites/L3_forest/vignette_fade.png" type="Texture" id=2]
[ext_resource path="res://BG.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/L3_forest/foyer/foyer_tile2-min.png" type="Texture" id=4]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/2.0 - Forest/mansion/mansion_marble_room.gd" type="Script" id=6]
[ext_resource path="res://Levels/2.0 - Forest/Candelabra_front.tscn" type="PackedScene" id=7]
[ext_resource path="res://sprites/L3_forest/mansion/mansion_marble_room/mansion_marble_room_bg_backwall-min.png" type="Texture" id=8]
[ext_resource path="res://sprites/L3_forest/vignette.png" type="Texture" id=9]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=10]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=11]
[ext_resource path="res://sprites/L3_forest/foyer/foyer_vignette_fade_white-min.png" type="Texture" id=12]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=13]
[ext_resource path="res://hitnhurtboxes/PlayerDetectionZone.tscn" type="PackedScene" id=14]

[sub_resource type="Animation" id=3]
resource_name = "default"
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("foyer_vignette_fade_white-min:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.501961, 0.121569, 0.121569, 0.631373 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("foyer_vignette_fade_white-min2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 4.6, 8.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.0666667, 0.172549, 0.478431, 0.286275 ), Color( 0.0666667, 0.164706, 0.454902, 0.823529 ), Color( 0.0745098, 0.203922, 0.584314, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("foyer_vignette_fade_white-min3:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.996078, 0.509804, 1, 0.823529 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ColorRect2:color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 6.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.780392, 0.717647, 0.929412, 1 ), Color( 0.109804, 0.0666667, 0.360784, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97.3441, 49.1887 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 102.439, 37.0089 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1026.76, 249.844 )

[node name="flower_hall" type="Node2D"]
script = ExtResource( 6 )

[node name="leftSP" parent="." instance=ExtResource( 10 )]
position = Vector2( 54.9928, -320.464 )

[node name="rightSP" parent="." instance=ExtResource( 10 )]
position = Vector2( 658.602, -288.376 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -50

[node name="BG" parent="CanvasLayer" instance=ExtResource( 3 )]
anchor_left = -0.00143509
anchor_right = -0.00143509
margin_left = -1431.17
margin_top = -1696.03
margin_right = 2317.83
margin_bottom = 1287.97

[node name="Node2D" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="Node2D"]
modulate = Color( 0.729412, 0.764706, 0.866667, 1 )
margin_left = -73.1477
margin_top = -884.0
margin_right = 981.852
margin_bottom = 1146.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sky" type="Node2D" parent="Node2D"]
rotation = -0.0266131

[node name="ColorRect2" type="ColorRect" parent="Node2D/sky"]
margin_left = -46.0219
margin_top = -1089.61
margin_right = 1022.98
margin_bottom = -748.611
color = Color( 0.461053, 0.407645, 0.658627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="foyer_vignette_fade_white-min" type="Sprite" parent="Node2D/sky"]
modulate = Color( 0.794291, 0.637175, 0.637175, 0.847743 )
position = Vector2( 441.032, -895.41 )
rotation = -1.5708
scale = Vector2( 0.166221, 1.02717 )
texture = ExtResource( 12 )

[node name="foyer_vignette_fade_white-min2" type="Sprite" parent="Node2D/sky"]
modulate = Color( 0.0712677, 0.190953, 0.540545, 0.70497 )
position = Vector2( 876.049, -989.303 )
rotation = -2.27028
scale = Vector2( 0.254957, 0.433065 )
texture = ExtResource( 12 )

[node name="foyer_vignette_fade_white-min3" type="Sprite" parent="Node2D/sky"]
modulate = Color( 0.996078, 0.509804, 1, 0.823529 )
position = Vector2( 265.966, -1005.55 )
rotation = 1.12846
scale = Vector2( 0.254957, 0.433065 )
texture = ExtResource( 12 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/sky"]
autoplay = "default"
anims/default = SubResource( 3 )

[node name="blackshades" type="Node2D" parent="Node2D"]

[node name="ColorRect3" type="ColorRect" parent="Node2D/blackshades"]
margin_left = -660.741
margin_top = -1120.9
margin_right = 1628.26
margin_bottom = -1019.9
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="Node2D/blackshades"]
margin_left = -512.876
margin_top = -1094.17
margin_right = 157.124
margin_bottom = -591.166
rect_rotation = -38.6796
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="Node2D/blackshades"]
margin_left = 958.491
margin_top = -1544.02
margin_right = 1628.49
margin_bottom = -1041.02
rect_rotation = 44.9558
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="Node2D/blackshades"]
margin_left = 587.926
margin_top = -1570.97
margin_right = 1257.93
margin_bottom = -1067.97
rect_rotation = 19.0233
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="Node2D/blackshades"]
margin_left = -176.786
margin_top = -1465.42
margin_right = 493.214
margin_bottom = -962.416
rect_rotation = -5.95634
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="Node2D/blackshades"]
margin_left = -664.136
margin_top = -1163.35
margin_right = 5.86438
margin_bottom = -660.349
rect_rotation = 7.87863
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect9" type="ColorRect" parent="Node2D/blackshades"]
margin_left = 960.737
margin_top = -1203.77
margin_right = 1630.74
margin_bottom = -700.774
rect_rotation = 7.87863
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dark" type="Node2D" parent="Node2D"]
modulate = Color( 0.968627, 0.85098, 0.941176, 1 )

[node name="mansion_marble_room_bg-min" type="Sprite" parent="Node2D/dark"]
position = Vector2( 451.883, -500.165 )
texture = ExtResource( 1 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 311.786, -324.46 )
MAX_SPEED = 400
camera = NodePath("../../PuppyCamera")

[node name="BackgroundWall" type="Node2D" parent="YSort"]
position = Vector2( 359.275, -486.519 )

[node name="doorshadows" type="Node2D" parent="YSort/BackgroundWall"]
modulate = Color( 1, 1, 1, 0.682353 )
position = Vector2( -1.16925, -1.16925 )

[node name="vignette_fade" type="Sprite" parent="YSort/BackgroundWall/doorshadows"]
position = Vector2( 107.316, -141.368 )
rotation = 1.5708
scale = Vector2( 0.129133, 1 )
texture = ExtResource( 2 )

[node name="mansion_marble_room_bg_backwall-min" type="Sprite" parent="YSort/BackgroundWall"]
position = Vector2( 92.6082, -13.6464 )
texture = ExtResource( 8 )

[node name="Candelabra_front" parent="YSort/BackgroundWall" instance=ExtResource( 7 )]
position = Vector2( -230.648, -116.951 )

[node name="Candelabra_front2" parent="YSort/BackgroundWall" instance=ExtResource( 7 )]
position = Vector2( 447.757, -120.72 )

[node name="PuppyCamera" parent="." instance=ExtResource( 13 )]
visible = false
position = Vector2( 386.776, -422.806 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( -692.119, -1126.18 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1784.99, 954.906 )

[node name="leftTZ" parent="." instance=ExtResource( 11 )]
position = Vector2( 786.659, -204.743 )

[node name="CollisionShape2D" parent="leftTZ" index="0"]
position = Vector2( 573.07, -167.703 )
shape = SubResource( 1 )

[node name="rightTZ" parent="." instance=ExtResource( 11 )]
position = Vector2( -43.0199, -225.839 )
rotation = -1.57053

[node name="CollisionShape2D" parent="rightTZ" index="0"]
position = Vector2( 121.285, -268.113 )
shape = SubResource( 2 )

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="FG" type="Node2D" parent="."]

[node name="vignette" type="Sprite" parent="FG"]
position = Vector2( 487.715, -526.795 )
scale = Vector2( 0.728432, 3.17511 )
texture = ExtResource( 9 )

[node name="Collisions" type="Node2D" parent="."]

[node name="right" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/right"]
position = Vector2( -762.132, -57.2701 )
polygon = PoolVector2Array( 1236.13, -1005.97, 550.444, -386.499, 683.189, -352.62, 718.317, -387.415, 782.23, -387.764, 813.54, -367.317, 828.875, -390.983, 946.447, -392.876, 972.645, -374.985, 998.243, -394.535, 1083.83, -396.071, 1102.36, -373.068, 1149.64, -376.263, 1151.49, -398.503, 1153.15, -620.908, 1309.39, -620.351, 1303.12, -389.425, 1332.64, -366.422, 1366.48, -392.006, 1457.28, -397.03, 1486.64, -374.729, 1510.17, -399.408, 1626.57, -390.064, 1655.33, -366.422, 1678.28, -395.048, 1725.05, -399.555, 1759.48, -350.448, 1861.08, -423.93 )

[node name="bottom" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/bottom"]
position = Vector2( -39.4821, 649.413 )
polygon = PoolVector2Array( -28.862, -1354.56, -41.0116, 492.512, 996.084, 492.512, 1021.59, -1165.44, 1543.86, -23.3803, 519.02, 1496.42, -566.18, -41.609 )

[node name="Tween" type="Tween" parent="."]

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 14 )]
position = Vector2( 482.259, -891.346 )

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 4, 330.983 )
shape = SubResource( 4 )

[connection signal="transition_triggered" from="leftTZ" to="." method="_on_leftTZ_transition_triggered"]
[connection signal="transition_triggered" from="rightTZ" to="." method="_on_rightTZ_transition_triggered"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]

[editable path="PuppyCamera"]
[editable path="leftTZ"]
[editable path="rightTZ"]
[editable path="PlayerDetectionZone"]
